Pull request #333: MCA-2874 - change call network quality string, update infobip-rtc lib
Merge in MML/infobip-mobile-messaging-android from feature/MCA-2685-call_network_quality_translations to master

Squashed commit of the following:

commit b435cf833ec506da2745bfcfb58fd3229be15c89
Author: Jakub Miško <Jakub.Misko@infobip.com>
Date:   Fri Apr 21 09:35:06 2023 +0200

    MCA-2874 - change call network quality string, update infobip-rtc lib

--- a/infobip-rtc-ui/src/main/res/values-cs/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-cs/strings.xml
@@ -16,7 +16,7 @@
     <string name="mm_unknown">Neznámý</string>
     <string name="mm_call_finished">Hovor ukončen</string>
     <string name="mm_audio_permission_required">Ke zpracování hovorů je vyžadováno oprávnění ke zvuku.</string>
-    <string name="mm_weak_internet_connection">Slabé připojení k internetu</string>
+    <string name="mm_call_weak_internet_connection">Vaše síť způsobuje špatnou kvalitu hovoru</string>
     <string name="mm_microphone_muted">Ztlumeno</string>
     <string name="mm_unknown_error">Neznámá chyba</string>
     <string name="mm_unmute">Zapnout zvuk</string>
