--- a/infobip-rtc-ui/src/main/res/values-sv/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-sv/strings.xml
@@ -16,7 +16,7 @@
     <string name="mm_unknown">Okänd</string>
     <string name="mm_call_finished">Samtalet avslutat</string>
     <string name="mm_audio_permission_required">Ljudtillstånd krävs för att hantera samtal.</string>
-    <string name="mm_weak_internet_connection">Svag internetuppkoppling</string>
+    <string name="mm_call_weak_internet_connection">Ditt nätverk orsakar dålig samtalskvalitet</string>
     <string name="mm_microphone_muted">Dämpad</string>
     <string name="mm_unknown_error">Okänt fel</string>
     <string name="mm_unmute">Slå på ljudet</string>
