--- a/infobip-rtc-ui/src/main/res/values-tr/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-tr/strings.xml
@@ -16,7 +16,7 @@
     <string name="mm_unknown">Bilinmeyen</string>
     <string name="mm_call_finished">arama bitti</string>
     <string name="mm_audio_permission_required">Çağrıları işlemek için ses izni gereklidir.</string>
-    <string name="mm_weak_internet_connection">Zayıf internet bağlantısı</string>
+    <string name="mm_call_weak_internet_connection">Ağınız düşük arama kalitesine neden oluyor</string>
     <string name="mm_microphone_muted">sessiz</string>
     <string name="mm_unknown_error">Bilinmeyen hata</string>
     <string name="mm_unmute">Sesini açmak</string>
