--- a/infobip-rtc-ui/src/main/res/values-ar/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-ar/strings.xml
@@ -16,7 +16,7 @@
     <string name="mm_unknown">مجهول</string>
     <string name="mm_call_finished">انتهت المكالمة</string>
     <string name="mm_audio_permission_required">مطلوب إذن الصوت للتعامل مع المكالمات.</string>
-    <string name="mm_weak_internet_connection">اتصال ضعيف بالإنترنت</string>
+    <string name="mm_call_weak_internet_connection">تتسبب شبكتك في ضعف جودة الاتصال</string>
     <string name="mm_microphone_muted">صامت</string>
     <string name="mm_unknown_error">خطأ غير معروف</string>
     <string name="mm_unmute">unmute</string>
