--- a/infobip-rtc-ui/src/main/res/values-fi-rFI/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-fi-rFI/strings.xml
@@ -16,7 +16,7 @@
     <string name="mm_unknown">Tuntematon</string>
     <string name="mm_call_finished">Puhelu päättynyt</string>
     <string name="mm_audio_permission_required">Puheluiden käsittelyyn tarvitaan äänilupa.</string>
-    <string name="mm_weak_internet_connection">Heikko Internet-yhteys</string>
+    <string name="mm_call_weak_internet_connection">Verkkosi aiheuttaa huonon puhelun laadun</string>
     <string name="mm_microphone_muted">Mykistetty</string>
     <string name="mm_unknown_error">Tuntematon virhe</string>
     <string name="mm_unmute">Poista mykistys</string>
