--- a/infobip-rtc-ui/src/main/res/values-ru/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-ru/strings.xml
@@ -16,7 +16,7 @@
     <string name="mm_unknown">Неизвестный</string>
     <string name="mm_call_finished">Вызов завершен</string>
     <string name="mm_audio_permission_required">Разрешение на аудио требуется для обработки вызовов.</string>
-    <string name="mm_weak_internet_connection">Слабое интернет-соединение</string>
+    <string name="mm_call_weak_internet_connection">Ваша сеть вызывает плохое качество связи</string>
     <string name="mm_microphone_muted">Приглушен</string>
     <string name="mm_unknown_error">Неизвестная ошибка</string>
     <string name="mm_unmute">Включить звук</string>
