--- a/infobip-rtc-ui/src/main/res/values-uk/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-uk/strings.xml
@@ -16,7 +16,7 @@
     <string name="mm_unknown">Невідомий</string>
     <string name="mm_call_finished">Дзвінок завершено</string>
     <string name="mm_audio_permission_required">Для обробки викликів потрібен дозвіл на звук.</string>
-    <string name="mm_weak_internet_connection">Слабке підключення до Інтернету</string>
+    <string name="mm_call_weak_internet_connection">Ваша мережа спричиняє низьку якість зв’язку</string>
     <string name="mm_microphone_muted">Вимкнено</string>
     <string name="mm_unknown_error">Невідома помилка</string>
     <string name="mm_unmute">Увімкнути звук</string>
