--- a/infobip-rtc-ui/src/main/res/values/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="mm_unknown">Unknown</string>
     <string name="mm_call_finished">Call finished</string>
     <string name="mm_audio_permission_required">Audio permission is required to handle calls.</string>
-    <string name="mm_weak_internet_connection">Weak internet connection</string>
+    <string name="mm_call_weak_internet_connection">Your network is causing poor call quality</string>
     <string name="mm_microphone_muted">Muted</string>
     <string name="mm_unknown_error">Unknown error</string>
     <string name="mm_unmute">Unmute</string>
