Pull request #342: MCA-2926 - request notification permission if needed
Merge in MML/infobip-mobile-messaging-android from feature/MCA-2926-webrtcui-android-13-push-permission to master

Squashed commit of the following:

commit 0a413d986a5135545da6c2494844383574771873
Author: Jakub Miško <Jakub.Misko@infobip.com>
Date:   Mon May 15 10:53:08 2023 +0200

    MCA-2926 - auto decline call on missing notification permission

commit b1f103cfe30dba38659757ba3951dde66e8a6a05
Author: Jakub Miško <Jakub.Misko@infobip.com>
Date:   Fri May 12 14:26:50 2023 +0200

    MCA-2926 - fix screen share notification remaining after hangup, calls delegate call caching removed

commit 4b29dec189ceb50685a8bcabefc3f652992a8188
Author: Jakub Miško <Jakub.Misko@infobip.com>
Date:   Wed May 10 15:50:56 2023 +0200

    MCA-2926 - request notification permission if needed

--- a/infobip-rtc-ui/src/main/res/values-cs/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-cs/strings.xml
@@ -27,4 +27,5 @@
     <string name="mm_screen_sharing">Sdílení obrazovky</string>
     <string name="mm_screen_sharing_description">Vaše obrazovka je sdílená</string>
     <string name="mm_in_call">Probíhající hovor</string>
+    <string name="mm_notification_permission_required_declining_call">Chybí oprávnění k oznámení. Odmítam příchozí hovor.</string>
 </resources>
