--- a/infobip-rtc-ui/src/main/res/values-fi-rFI/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-fi-rFI/strings.xml
@@ -27,4 +27,5 @@
     <string name="mm_screen_sharing">Näytön jakaminen</string>
     <string name="mm_screen_sharing_description">Näyttösi on jaettu</string>
     <string name="mm_in_call">Puhelussa</string>
+    <string name="mm_notification_permission_required_declining_call">Ilmoituslupa puuttuu. Tulevan puhelun hylkääminen.</string>
 </resources>
