--- a/infobip-rtc-ui/src/main/res/values-ja/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-ja/strings.xml
@@ -27,4 +27,5 @@
     <string name="mm_screen_sharing">画面共有</string>
     <string name="mm_screen_sharing_description">あなたの画面は共有されています</string>
     <string name="mm_in_call">通話中</string>
+    <string name="mm_notification_permission_required_declining_call">通知権限がありません。 着信を拒否します。</string>
 </resources>
