--- a/infobip-rtc-ui/src/main/res/values-ru/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-ru/strings.xml
@@ -27,4 +27,5 @@
     <string name="mm_screen_sharing">Демонстрация экрана</string>
     <string name="mm_screen_sharing_description">Ваш экран открыт</string>
     <string name="mm_in_call">Во время разговора</string>
+    <string name="mm_notification_permission_required_declining_call">Отсутствует разрешение на уведомление. Отклонение входящего вызова.</string>
 </resources>
