--- a/infobip-rtc-ui/src/main/res/values-ar/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-ar/strings.xml
@@ -27,4 +27,5 @@
     <string name="mm_screen_sharing">مشاركة الشاشة</string>
     <string name="mm_screen_sharing_description">شاشتك مشتركة</string>
     <string name="mm_in_call">في المكالمة</string>
+    <string name="mm_notification_permission_required_declining_call">إذن الإعلام مفقود. رفض المكالمة الواردة.</string>
 </resources>
