--- a/infobip-rtc-ui/src/main/res/values-da/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-da/strings.xml
@@ -27,4 +27,5 @@
     <string name="mm_screen_sharing">Skærmdeling</string>
     <string name="mm_screen_sharing_description">Din skærm er delt</string>
     <string name="mm_in_call">I et opkald</string>
+    <string name="mm_notification_permission_required_declining_call">Manglende notifikationstilladelse. Afviser indgående opkald.</string>
 </resources>
