--- a/infobip-rtc-ui/src/main/res/values-hu/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-hu/strings.xml
@@ -27,4 +27,5 @@
     <string name="mm_screen_sharing">Képernyőmegosztás</string>
     <string name="mm_screen_sharing_description">A képernyő meg van osztva</string>
     <string name="mm_in_call">Egy hívásban</string>
+    <string name="mm_notification_permission_required_declining_call">Hiányzó értesítési engedély. Csökkenő bejövő hívás.</string>
 </resources>
