--- a/infobip-rtc-ui/src/main/res/values-nl/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-nl/strings.xml
@@ -27,4 +27,5 @@
     <string name="mm_screen_sharing">Scherm delen</string>
     <string name="mm_screen_sharing_description">Je scherm is gedeeld</string>
     <string name="mm_in_call">In een gesprek</string>
+    <string name="mm_notification_permission_required_declining_call">Ontbrekende machtiging voor meldingen. Inkomende oproep weigeren.</string>
 </resources>
