--- a/infobip-rtc-ui/src/main/res/values-pl/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-pl/strings.xml
@@ -27,4 +27,5 @@
     <string name="mm_screen_sharing">Udostępnianie ekranu</string>
     <string name="mm_screen_sharing_description">Twój ekran jest udostępniony</string>
     <string name="mm_in_call">W rozmowie</string>
+    <string name="mm_notification_permission_required_declining_call">Brak uprawnień do powiadomień. Odrzucanie połączenia przychodzącego.</string>
 </resources>
