--- a/infobip-rtc-ui/src/main/res/values-ro/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-ro/strings.xml
@@ -27,4 +27,5 @@
     <string name="mm_screen_sharing">Partajarea ecranului</string>
     <string name="mm_screen_sharing_description">Ecranul dvs. este partajat</string>
     <string name="mm_in_call">Într-un apel</string>
+    <string name="mm_notification_permission_required_declining_call">Lipsește permisiunea de notificare. Se refuză apelul primit.</string>
 </resources>
