--- a/infobip-rtc-ui/src/main/res/values-sk/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-sk/strings.xml
@@ -27,4 +27,5 @@
     <string name="mm_screen_sharing">Zdieľanie obrazovky</string>
     <string name="mm_screen_sharing_description">Vaša obrazovka je zdieľaná</string>
     <string name="mm_in_call">Prebiehajúci hovor</string>
+    <string name="mm_notification_permission_required_declining_call">Chýbajúce povolenie notifikácii. Odmietam prichádzajúci hovor.</string>
 </resources>
