--- a/infobip-rtc-ui/src/main/res/values-th/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-th/strings.xml
@@ -27,4 +27,5 @@
     <string name="mm_screen_sharing">การแชร์หน้าจอ</string>
     <string name="mm_screen_sharing_description">หน้าจอของคุณถูกแชร์</string>
     <string name="mm_in_call">ในการโทร</string>
+    <string name="mm_notification_permission_required_declining_call">ไม่มีสิทธิ์การแจ้งเตือน ปฏิเสธสายเรียกเข้า</string>
 </resources>
