--- a/infobip-rtc-ui/src/main/res/values-tr/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-tr/strings.xml
@@ -27,4 +27,5 @@
     <string name="mm_screen_sharing">Ekran paylaşımı</string>
     <string name="mm_screen_sharing_description">Ekranınız paylaşıldı</string>
     <string name="mm_in_call">Telefonda</string>
+    <string name="mm_notification_permission_required_declining_call">Eksik bildirim izni. Gelen çağrı reddediliyor.</string>
 </resources>
