--- a/infobip-rtc-ui/src/main/res/values-vi/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-vi/strings.xml
@@ -27,4 +27,5 @@
     <string name="mm_screen_sharing">Chia sẻ màn hình</string>
     <string name="mm_screen_sharing_description">Màn hình của bạn được chia sẻ</string>
     <string name="mm_in_call">Trong một cuộc gọi</string>
+    <string name="mm_notification_permission_required_declining_call">Thiếu quyền thông báo. Đang từ chối cuộc gọi đến.</string>
 </resources>
