Pull request #347: MCA-2851 Added missed doco and dark mode switch into demo app chat flavor
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-2851_dark_mode_update to master

Squashed commit of the following:

commit 4ff1e3432b43efed931c333c3538344eb0af9237
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Thu May 25 11:54:34 2023 +0200

    MCA-2851 Added missed doco and dark mode switch into demo app chat flavor

--- a/infobip-mobile-messaging-android-demo/src/chatCommon/res/values/strings.xml
+++ b/infobip-mobile-messaging-android-demo/src/chatCommon/res/values/strings.xml
@@ -42,4 +42,7 @@
     <string name="toast_registration_id_copy">Registration ID copied to clipboard</string>
     <string name="turkish">Türkçe</string>
     <string name="ukrainian">украї́нська</string>
+    <string name="dark_mode_dark">Dark</string>
+    <string name="dark_mode_light">Light</string>
+    <string name="dark_mode_auto">Auto</string>
 </resources>
