Pull request #348: Mtokar MCA-2544 process lifecycle bug
Merge in MML/infobip-mobile-messaging-android from mtokar-MCA-2544_process_lifecycle_bug to master

Squashed commit of the following:

commit 4f15adea6c7a1447ea748559ae1f36183b118522
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Tue Jun 6 08:49:22 2023 +0200

    remove service from nanifest

commit a02f253a8922bf6ba4ba2b965c3e5f0bb39ba39c
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Thu Jun 1 11:34:58 2023 +0200

    review fixes

commit a70c46f960068ad4bb8bc9af1ebc7183a3466de8
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Thu Jun 1 02:02:45 2023 +0200

    change success to failure when pushRegId null

commit edc5940238d1e38a2b74657cb38bebc3f5a0e104
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Thu Jun 1 01:58:48 2023 +0200

    review fixes

commit 96573eece6c2dd2a60ede94de7ad16e42ceda7a8
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Wed May 31 17:22:28 2023 +0200

    wip

commit f2accff38e60f571e52182977e8f25fee3cd6437
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Tue May 30 02:19:41 2023 +0200

    review fixes

commit 966623a885ade255396cfacf2fbfa81c93edb101
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Thu May 25 16:56:59 2023 +0200

    jobId private

commit c0d45c938beb7cc8a339f4fa8b8310f83a2c03ea
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Thu May 25 16:56:31 2023 +0200

    PersonalizationService.kt

--- a/infobip-rtc-ui/src/main/res/values/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values/strings.xml
@@ -28,4 +28,6 @@
     <string name="mm_screen_sharing_description">Your screen is shared</string>
     <string name="mm_in_call">In a call</string>
     <string name="mm_notification_permission_required_declining_call">Missing notification permission. Declining incoming call.</string>
+    <string name="mm_personalization_notification_channel">Personalization</string>
+    <string name="mm_personalization_notification_description">Updating user data</string>
 </resources>
