--- a/infobip-rtc-ui/src/main/res/values-hr/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-hr/strings.xml
@@ -28,4 +28,5 @@
     <string name="mm_incoming_call">Dolazni poziv</string>
     <string name="mm_unknown">Nepoznato</string>
     <string name="mm_notification_permission_required_declining_call">Nedostaje dozvola za obavijesti. Odbijanje dolaznog poziva.</string>
+    <string name="mm_your_microphone_is_muted">Vaš mikrofon je isključen</string>
 </resources>
