--- a/infobip-rtc-ui/src/main/res/values-pt/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-pt/strings.xml
@@ -28,4 +28,5 @@
     <string name="mm_screen_sharing_description">Sua tela é compartilhada</string>
     <string name="mm_in_call">Numa chamada</string>
     <string name="mm_notification_permission_required_declining_call">Permissão de notificação ausente. Recusando chamada recebida.</string>
+    <string name="mm_your_microphone_is_muted">Seu microfone está mudo</string>
 </resources>
