--- a/infobip-rtc-ui/src/main/res/values-tr/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-tr/strings.xml
@@ -28,4 +28,5 @@
     <string name="mm_screen_sharing_description">Ekranınız paylaşıldı</string>
     <string name="mm_in_call">Telefonda</string>
     <string name="mm_notification_permission_required_declining_call">Eksik bildirim izni. Gelen çağrı reddediliyor.</string>
+    <string name="mm_your_microphone_is_muted">Mikrofonunuzun sesi kapatıldı</string>
 </resources>
