--- a/infobip-rtc-ui/src/main/res/values-cs/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-cs/strings.xml
@@ -28,4 +28,5 @@
     <string name="mm_screen_sharing_description">Vaše obrazovka je sdílená</string>
     <string name="mm_in_call">Probíhající hovor</string>
     <string name="mm_notification_permission_required_declining_call">Chybí oprávnění k oznámení. Odmítam příchozí hovor.</string>
+    <string name="mm_your_microphone_is_muted">Váš mikrofon je ztlumený</string>
 </resources>
