--- a/infobip-rtc-ui/src/main/res/values-es/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-es/strings.xml
@@ -28,4 +28,5 @@
     <string name="mm_screen_sharing_description">Tu pantalla es compartida</string>
     <string name="mm_in_call">En una llamada</string>
     <string name="mm_notification_permission_required_declining_call">Permiso de notificación faltante. Rechazar llamada entrante.</string>
+    <string name="mm_your_microphone_is_muted">Tu micrófono está silenciado</string>
 </resources>
