--- a/infobip-rtc-ui/src/main/res/values-hu/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-hu/strings.xml
@@ -28,4 +28,5 @@
     <string name="mm_screen_sharing_description">A képernyő meg van osztva</string>
     <string name="mm_in_call">Egy hívásban</string>
     <string name="mm_notification_permission_required_declining_call">Hiányzó értesítési engedély. Csökkenő bejövő hívás.</string>
+    <string name="mm_your_microphone_is_muted">A mikrofon el van némítva</string>
 </resources>
