--- a/infobip-rtc-ui/src/main/res/values-in/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-in/strings.xml
@@ -28,4 +28,5 @@
     <string name="mm_screen_sharing_description">Layar Anda dibagikan</string>
     <string name="mm_in_call">Dalam panggilan</string>
     <string name="mm_notification_permission_required_declining_call">Izin notifikasi tidak ada. Menolak panggilan masuk.</string>
+    <string name="mm_your_microphone_is_muted">Mikrofon Anda dibisukan</string>
 </resources>
