--- a/infobip-rtc-ui/src/main/res/values-pl/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-pl/strings.xml
@@ -28,4 +28,5 @@
     <string name="mm_screen_sharing_description">Twój ekran jest udostępniony</string>
     <string name="mm_in_call">W rozmowie</string>
     <string name="mm_notification_permission_required_declining_call">Brak uprawnień do powiadomień. Odrzucanie połączenia przychodzącego.</string>
+    <string name="mm_your_microphone_is_muted">Twój mikrofon jest wyciszony</string>
 </resources>
