--- a/infobip-rtc-ui/src/main/res/values-sv/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-sv/strings.xml
@@ -28,4 +28,5 @@
     <string name="mm_screen_sharing_description">Din skärm är delad</string>
     <string name="mm_in_call">I ett samtal</string>
     <string name="mm_notification_permission_required_declining_call">Aviseringsbehörighet saknas. Avvisar inkommande samtal.</string>
+    <string name="mm_your_microphone_is_muted">Din mikrofon är avstängd</string>
 </resources>
