--- a/infobip-rtc-ui/src/main/res/values-th/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-th/strings.xml
@@ -28,4 +28,5 @@
     <string name="mm_screen_sharing_description">หน้าจอของคุณถูกแชร์</string>
     <string name="mm_in_call">ในการโทร</string>
     <string name="mm_notification_permission_required_declining_call">ไม่มีสิทธิ์การแจ้งเตือน ปฏิเสธสายเรียกเข้า</string>
+    <string name="mm_your_microphone_is_muted">ไมโครโฟนของคุณปิดอยู่</string>
 </resources>
