--- a/infobip-rtc-ui/src/main/res/values-zh-rTW/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-zh-rTW/strings.xml
@@ -28,4 +28,5 @@
     <string name="mm_video_permission_required">視頻通話需要攝像頭權限。</string>
     <string name="mm_screen_sharing">屏幕共享</string>
     <string name="mm_notification_permission_required_declining_call">缺少通知權限。 拒絕來電。</string>
+    <string name="mm_your_microphone_is_muted">您的麥克風已靜音</string>
 </resources>
